cluster/manifests/lifecycle-job-hook/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lifecycle-job-hook
  labels:
    name: lifecycle-job-hook
    pod-security.kubernetes.io/enforce: restricted
