cluster/manifests/lifecycle-job-hook/overlays/dev/peer_authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: lifecycle-job-hook
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: lifecycle-job-hook
      app.kubernetes.io/component: ""
  mtls:
    mode: STRICT
  portLevelMtls:
    "9443":
      mode: PERMISSIVE # AdmissionWebhook
